--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/store": "^10.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "uuid": "^8.3.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
